fix spacing

--- a/assets/webpage/css/style.css
+++ b/assets/webpage/css/style.css
@@ -147,7 +147,7 @@ button.navbar-toggler[aria-expanded="true"]
 }
 hr.spacing {
   background: transparent !important;
-  margin: 30px !important;
+  margin: 5px !important;
 }
 .m-0 {
   margin: 0;
